# crm_warehouse-

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
productcrm/: asgi.py  settings.py  urls.py  views.py  wsgi.py
static/css/: about.css
templates/: about.html  contact.html  index.html  layout.html  navigation.html
templates/warehouse/: index.html  product.html  product_list.html
warehouse/: admin.py  forms.py  models.py  urls.py  views.py
warehouse/migrations/: 0001_initial.py  0002_alter_supplier_contact_person_alter_supplier_email_and_more.py  0003_alter_product_description_alter_product_image_and_more.py  0004_alter_order_comments.py  0005_remove_inventory_minimum_quantity_and_more.py  0006_alter_order_channel.py  0007_remove_order_product_remove_order_quantity_orderitem.py  0008_order_tracking_number.py  0009_order_warehouse_o_trackin_86e86e_idx.py
warehouse/templatetags/: custom_tags.py
