[tool.poetry]
name = "productcrm"
version = "0.1.0"
description = ""
authors = ["rosoporto <rosoporto@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
django-bootstrap4 = "^24.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
