[tool.poetry]
name = "productcrm"
version = "0.1.0"
description = ""
authors = ["rosoporto <rosoporto@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
django-bootstrap4 = "^24.4"
pillow = "^11.0.0"
django-extensions = "^3.2.3"
ipython = "^8.28.0"
pytz = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
